title change and route fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-anupam-kumar-portfolio",
+  "name": "anupam-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
